-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u66, 9
-
Component/s: javafx
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8151309 | 8u102 | Arunprasad Rajkumar | P3 | Resolved | Fixed | b01 |
| JDK-8159104 | 8u92 | Arunprasad Rajkumar | P3 | Resolved | Fixed | b33 |
JavaFX loads web page so slowly the Java application appears hung.
A web page ("visitor") containing JavaScript that allows a user to share their browser's view with another user ("agent") who is using a JavaFX-based browser.
The agent's viewing application appears to hang when the visitor's page has a background-color specified on a page with "iframe" that opens/closes. The specific background color is unimportant; it may be because the "flyout" background has opacity and this causes a problem when the main page has a background-color.
A web page ("visitor") containing JavaScript that allows a user to share their browser's view with another user ("agent") who is using a JavaFX-based browser.
The agent's viewing application appears to hang when the visitor's page has a background-color specified on a page with "iframe" that opens/closes. The specific background color is unimportant; it may be because the "flyout" background has opacity and this causes a problem when the main page has a background-color.
- backported by
-
JDK-8151309 JavaFX Application Performance Issue
-
- Resolved
-
-
JDK-8159104 JavaFX Application Performance Issue
-
- Resolved
-
- relates to
-
JDK-8148129 Implement Accelerated composition for WebView
-
- Resolved
-