8149768: JavaFX Application Performance Issue

Reviewed-by: kcr